# OperatingSystems

./: CMakeLists.txt  main.cpp  test.cpp  test1.c
lab1/: main.cpp
lab2/: p0.cpp  p1.cpp  p2.cpp  task2_1.cpp  task2_2.cpp  task3.cpp  task4.cpp
lab3/: task1.2-2.4.cpp  task3.cpp  task4.1.cpp  task4.2.cpp  task4.cpp
lab4/: child  child.cpp  task1.cpp  task3.cpp  task4.cpp  task5.cpp
lab5/: task1.1.cpp  task1.2.cpp  task2.1.cpp  task2.2.cpp  task3.client.cpp  task3.server.cpp  task4.cpp
lab6/: task.cpp  varya_6(11).cpp
